Fixed bug where long lines didn't wrap

--- a/app/assets/less/style.less
+++ b/app/assets/less/style.less
@@ -64,7 +64,7 @@ header {
 		}
 
 		code {
-			white-space: pre;
+			white-space: pre-wrap;
 		}
 
 		.prompt {
